wk_taa_taaqa/src/objects/ServiceSource_Role_DTN__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Enterprise_Name</description>
        <inlineHelpText>Enterprise_Name</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Source_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Source Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ServiceSource_Role_DTNs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sfdc_Custid__c</fullName>
        <label>Sfdc Custid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ServiceSource Role DTN</label>
    <nameField>
        <displayFormat>SS-{000}</displayFormat>
        <label>ServiceSource Role DTN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceSource Role DTNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>